Large bit of modular work