@@ -16,6 +16,7 @@ dependencies {
 	optional("io.projectreactor:reactor-core")
 	optional("jakarta.annotation:jakarta.annotation-api")
 	optional("jakarta.ejb:jakarta.ejb-api")
+	optional("jakarta.enterprise:jakarta.enterprise.cdi-api")
 	optional("jakarta.enterprise.concurrent:jakarta.enterprise.concurrent-api")
 	optional("jakarta.inject:jakarta.inject-api")
 	optional("jakarta.interceptor:jakarta.interceptor-api")
@@ -56,4 +57,13 @@ dependencies {
 	testRuntimeOnly("org.glassfish.external:opendmk_jmxremote_optional_jar")
 	testRuntimeOnly("org.javamoney:moneta")
 	testRuntimeOnly("org.junit.vintage:junit-vintage-engine") // for @Inject TCK
+}
+
+tasks.named('compileJava', JavaCompile) {
+	def nonModularLibs = ['C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.crac\\crac\\1.3.0\\765086b34b7c70bf9539177bb30f087b295bf70b\\crac-1.3.0.jar', 'C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.apache-extras.beanshell\\bsh\\2.0b6\\fb418f9b33a0b951e9a2978b4b6ee93b2707e72f\\bsh-2.0b6.jar']
+	options.compilerArgs = [
+			'--module-path', nonModularLibs.join(File.pathSeparator) + ';C:\\Users\\Clayton\\Source\\spring-framework\\spring-aop\\build\\libs\\spring-aop-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\Source\\spring-framework\\spring-beans\\build\\libs\\spring-beans-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\Source\\spring-framework\\spring-expression\\build\\libs\\spring-expression-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\Source\\spring-framework\\spring-core\\build\\libs\\spring-core-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\io.micrometer\\micrometer-observation\\1.12.0-M1\\8b466d49f40d464be73e7172b848e72a0472e161\\micrometer-observation-1.12.0-M1.jar;C:\\Users\\Clayton\\Source\\spring-framework\\spring-instrument\\build\\libs\\spring-instrument-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.enterprise\\jakarta.enterprise.cdi-api\\4.0.1\\2012f388c6de83e29101cbf82c3ed2bd37931c64\\jakarta.enterprise.cdi-api-4.0.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.interceptor\\jakarta.interceptor-api\\2.1.0\\1d06a662708601400af4556577ee514c4ad01549\\jakarta.interceptor-api-2.1.0.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.annotation\\jakarta.annotation-api\\2.0.0\\f3cd84cc45f583a0fdc42a8156d6c5b98d625c1a\\jakarta.annotation-api-2.0.0.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.ejb\\jakarta.ejb-api\\4.0.1\\70f6c55dad415f58b8428ae4bb215484368b8764\\jakarta.ejb-api-4.0.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.enterprise.concurrent\\jakarta.enterprise.concurrent-api\\3.0.2\\7e30042c724f9124de8dca80f58d1f196b8fa169\\jakarta.enterprise.concurrent-api-3.0.2.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.inject\\jakarta.inject-api\\2.0.1\\4c28afe1991a941d7702fe1362c365f0a8641d1e\\jakarta.inject-api-2.0.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.hibernate.validator\\hibernate-validator\\7.0.5.Final\\cf1798d116def7500271167f903fec7f453bb61d\\hibernate-validator-7.0.5.Final.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.validation\\jakarta.validation-api\\3.0.2\\92b6631659ba35ca09e44874d3eb936edfeee532\\jakarta.validation-api-3.0.2.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\javax.annotation\\javax.annotation-api\\1.3.2\\934c04d3cfef185a8008e7bf34331b79730a9d43\\javax.annotation-api-1.3.2.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\javax.money\\money-api\\1.1\\a3bf7008b3a5b1c229ef24030f5004835ae57bea\\money-api-1.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.aspectj\\aspectjweaver\\1.9.19\\afbffb1210239fbba5cad73093c5b216d515838f\\aspectjweaver-1.9.19.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.apache.groovy\\groovy\\4.0.13\\30046b48d472bf22f4d361f377e2e343b9e4a402\\groovy-4.0.13.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.jetbrains.kotlin\\kotlin-reflect\\1.9.0\\2891f552979d4bf4d4ec516acb9df769fb62dbe9\\kotlin-reflect-1.9.0.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.jetbrains.kotlin\\kotlin-stdlib\\1.9.0\\8ee15ef0c67dc83d874f412d84378d7f0eb50b63\\kotlin-stdlib-1.9.0.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\io.projectreactor\\reactor-core\\3.6.0-M1\\8979013c254bda70cba5be60656cea451becc415\\reactor-core-3.6.0-M1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.reactivestreams\\reactive-streams\\1.0.4\\3864a1320d97d7b045f729a326e1e077661f31b7\\reactive-streams-1.0.4.jar;C:\\Users\\Clayton\\Source\\spring-framework\\spring-jcl\\build\\libs\\spring-jcl-6.1.0-SNAPSHOT.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.el\\jakarta.el-api\\4.0.0\\ba9834bd2dba5014072bacbafecffaec1673b0f9\\jakarta.el-api-4.0.0.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.transaction\\jakarta.transaction-api\\2.0.1\\51a520e3fae406abb84e2e1148e6746ce3f80a1a\\jakarta.transaction-api-2.0.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\jakarta.enterprise\\jakarta.enterprise.lang-model\\4.0.1\\2b195781faad31c1724d8122136909c34c3ae79e\\jakarta.enterprise.lang-model-4.0.1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\io.micrometer\\micrometer-commons\\1.12.0-M1\\57c85eec02f196e5c97e0f029a751e43eb2232af\\micrometer-commons-1.12.0-M1.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.jboss.logging\\jboss-logging\\3.4.1.Final\\40fd4d696c55793e996d1ff3c475833f836c2498\\jboss-logging-3.4.1.Final.jar;C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\com.fasterxml\\classmate\\1.5.1\\3fe0bed568c62df5e89f4f174c101eab25345b6c\\classmate-1.5.1.jar',
+			//'--patch-module', 'crac=C:\\Users\\Clayton\\.gradle\\caches\\modules-2\\files-2.1\\org.crac\\crac\\1.3.0\\765086b34b7c70bf9539177bb30f087b295bf70b\\crac-1.3.0.jar',
+			//'--add-exports', 'crac/org.crac=spring.context',
+	]
 }
